cambios generador_pagos_pendientes y GUID API
